<resources>
    <string name="app_name">Home Bar</string>
    <string name="error_network">Ошибка сервера</string>
    <string name="error_network_connection">Нет сети</string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="cocktail_name">Название коктейля</string>
    <string name="glass_type">Тип стакана:</string>
    <string name="taste_type">Вкус:</string>
    <string name="ingridient_type">Ингридиент:</string>
    <string name="carbonated">Газированный</string>
    <string name="alcoholic">Алкогольный</string>
    <string name="cocktail_rating">Рейтинг:</string>
    <string name="dialog_color_title">Цвет</string>
    <string name="skill_novice">Новичек</string>
    <string name="skill_middle">Средний</string>
    <string name="skill_master">Продвинутый</string>
    <string name="skill_level">Выберите уровень мастерства:</string>
    <string name="cocktail_color">Цвет коктейля</string>
    <string name="skill_level_string">Уровень мастерства:</string>
    <string name="not_released_yet">в процессе разработки</string>
    <string name="ingredients_toolbar_title">Мои ингридиенты</string>
    <string name="drinks_toolbar_title">Мои коктейли</string>
    <string name="search_result_toolbar_title">Результаты поиска</string>
    <string name="ingredients_list_toolbar_title">Мои ингридиенты</string>
    <string name="et_singledrink_ingredients">Ингредиенты</string>
    <string name="et_singledrink_preparation">Приготовление</string>
    <string name="tv_singledrink_notes">Заметки</string>
    <string name="search_drink_fragment_title">Поиск</string>
    <string name="ingredient_description_title">Описание</string>
    <string name="ingredient_name_title">Название</string>
    <string name="drinks_list_fragment_title">Мои коктейли</string>
    <string name="search_cocktails_toolbar_title">Поиск коктейлей</string>
    <string name="menu_about">О приложении</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_search">ИСКАТЬ</string>
    <string name="menu_delete">Удалить</string>
    <string name="menu_add">ДОБАВИТЬ</string>
    <string name="menu_choose">ВЫБРАТЬ</string>
    <string name="title_new_cocktail">Новый коктейль</string>
    <string name="title_edit_cocktail">Редактирование</string>
    <string name="title_choose_tastes">Choose tastes</string>
    <string name="menu_save">Сохранить</string>
    <string name="menu_drink_add">Добавить</string>
    <string name="title_choose_ingredients">Выбор ингридиентов</string>
    <string name="take_photo">Сделать фото</string>
    <string name="choose_from_library">Выбрать из галлереи</string>
    <string name="remove_picture">Удалить картинку</string>
    <string name="negative_button">Close</string>
    <string name="title_new_ingredient">Новый ингредиент</string>
    <string name="title_ingredient_edit">Редактирование</string>
    <string name="positive_button">OK</string>
    <string name="menu_edit">Edit</string>
    <string name="bt_add_ingredients">ингридиенты</string>
    <string name="bt_add_tastes">вкусы</string>
    <string name="singledrink_title_notes">Заметки</string>
    <string name="singledrink_title_general">О коктейле</string>
    <string name="noname_drink">безымянный :(</string>
    <string name="ingredient_related_drinks_title">Коктейли</string>
    <string name="drink_name_hint">Название коктейля</string>
    <string name="et_preparation_hint">1. Наполните бокал льдом…</string>
    <string name="drink_image">Фото коктейля</string>
    <string name="drink_notes_hint">Заметки о коктейле</string>
    <string name="alcoholic_drink_type">Алкогольный</string>
    <string name="no_alco_drink_type">Безалкогольный</string>
    <string name="carbo_drink_type">, Газированный</string>
    <string name="empty_list_or_error">empty list or error</string>
    <string name="no_items_founddrinks">список пуст</string>
    <string name="no_items_drinks">список пуст</string>
    <string name="no_items_ingredients">список пуст</string>
    <string name="no_items_found">по данному запросу коктейлей не обнаружено</string>
    <string name="ingredient_name_hint">Название ингридлиента</string>
    <string name="ingredient_description_hint">Описание ингридиента</string>
    <string name="ingredient_notes_hint">Заметки об ингридиенте</string>
    <string name="settings_fragment_title">Настройки</string>
    <string name="app_theme_color_title">Темы</string>
    <string name="bottom_bar_search">Поиск</string>
    <string name="bottom_bar_drinks">Коктейли</string>
    <string name="bottom_bar_ingredients">Ингридиенты</string>
    <string name="absolut_credits">Absolut Drinks is a website with drink and cocktail recipes.</string>
    <string name="freepic_credits">This app uses Freepic icons.</string>
    <string name="main_theme_name">Indigo</string>
    <string name="second_theme_name">Deep Purple</string>
    <string name="third_theme_name">Black</string>
    <string name="item_search_title">Search</string>
    <string name="about_app_text">Simple app which helps you to manage your home bar, hope you enjoy using it!</string>
    <string name="unknown_menu_item_toast">Unknown menu item</string>
    <string name="change_photo">Change photo</string>


</resources>
